[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.199", features = ["derive"] }
time = { version = "0.3.36", features = ["std", "local-offset", "formatting", "serde"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }

